force-app/main/default/objects/JBCXM__SurveyLogicRules__c/JBCXM__SurveyLogicRules__c.object-meta.xml
<CustomObject>
    <description>This is used to store conditional questions linking</description>
    <label>SurveyLogicRules</label>
    <nameField>
        <displayFormat>LR-{0000}</displayFormat>
        <label>SurveyLogicRules Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SurveyLogicRules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>