force-app/main/default/objects/JBCXM__SurveyLogicRules__c/fields/JBCXM__Answer__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Answer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is used to store answer from survey allowed answer</description>
    <label>Answer</label>
    <referenceTo>JBCXM__SurveyAllowedAnswers__c</referenceTo>
    <relationshipLabel>SurveyLogicRules</relationshipLabel>
    <relationshipName>SurveyLogicRulesAnswers</relationshipName>
    <type>Lookup</type>
</CustomField>