force-app/main/default/objects/JBCXM__SurveyLogicRules__c/fields/JBCXM__Criteria__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Criteria__c</fullName>
    <description>Criteria JSON</description>
    <label>Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>