force-app/main/default/objects/JBCXM__SurveyLogicRules__c/fields/JBCXM__DependentQuestion__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DependentQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This used to store the question which should be asked or skipped.</description>
    <label>DependentQuestion</label>
    <referenceTo>JBCXM__SurveyQuestion__c</referenceTo>
    <relationshipLabel>SurveyLogicRules (DependentQuestion)</relationshipLabel>
    <relationshipName>SurveyLogicRulesDependentQuestion</relationshipName>
    <type>Lookup</type>
</CustomField>