force-app/main/default/objects/JBCXM__SurveyLogicRules__c/fields/JBCXM__LogicType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__LogicType__c</fullName>
    <label>LogicType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ask</fullName>
            </value>
            <value>
                <fullName>Skip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>