force-app/main/default/objects/JBCXM__SurveyLogicRules__c/fields/JBCXM__PageInfo__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__PageInfo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Page Information Lookup</description>
    <label>PageInfo</label>
    <referenceTo>JBCXM__PageInfo__c</referenceTo>
    <relationshipLabel>SurveyLogicRules</relationshipLabel>
    <relationshipName>SurveyLogicRules</relationshipName>
    <type>Lookup</type>
</CustomField>