force-app/main/default/objects/JBCXM__SurveyLogicRules__c/fields/JBCXM__SubQuestion__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SubQuestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is used to store the sub question of  main questiion in logic rules .This is populate for matrix type question</description>
    <label>SubQuestion</label>
    <referenceTo>JBCXM__SurveyQuestion__c</referenceTo>
    <relationshipLabel>SurveyLogicRules (SurveySubQuestion)</relationshipLabel>
    <relationshipName>SurveyLogicRulesSubQuestion</relationshipName>
    <type>Lookup</type>
</CustomField>