force-app/main/default/objects/JBCXM__SurveyLogicRules__c/fields/JBCXM__SurveyMaster__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SurveyMaster__c</fullName>
    <description>This is used to survey id.</description>
    <label>SurveyMaster</label>
    <referenceTo>JBCXM__Survey__c</referenceTo>
    <relationshipLabel>SurveyLogicRules</relationshipLabel>
    <relationshipName>SurveyLogicRulesSurvey</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>