force-app/main/default/objects/JBCXM__SurveyLogicRules__c/fields/JBCXM__SurveyQuestion__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__SurveyQuestion__c</fullName>
    <description>This is the question on which rules are applied</description>
    <label>SurveyQuestion</label>
    <referenceTo>JBCXM__SurveyQuestion__c</referenceTo>
    <relationshipLabel>SurveyLogicRulesQuestion</relationshipLabel>
    <relationshipName>SurveyLogicRulesQuestion</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>