force-app/main/default/objects/JBCXM__SurveyLogicRules__c/listViews/JBCXM__All.listView-meta.xml
<ListView>
    <fullName>JBCXM__All</fullName>
    <columns>JBCXM__SurveyMaster__c</columns>
    <columns>JBCXM__SurveyQuestion__c</columns>
    <columns>JBCXM__SubQuestion__c</columns>
    <columns>JBCXM__LogicType__c</columns>
    <columns>JBCXM__Answer__c</columns>
    <columns>JBCXM__DependentQuestion__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>